# investment_tracking_bot

./: README.md  aerich.ini  aerich.toml  box_combination.py  docker-compose.yaml  pyproject.toml
app/aerich/: base.py
app/api/bot/: run.py
app/api/public/: debug_mode.py  main.py
app/api/public/modules/: routers.py
app/api/public/modules/assets/: serializers.py  views.py
app/api/public/modules/users/: serializers.py  views.py
app/core/: config.py
app/core/modules/assets/: constants.py  models.py  services.py
app/core/modules/binance/: client.py
app/core/modules/users/: auth.py  services.py
migrations/models/: 0_20240204130721_init.sql
system/: Dockerfile  entry_point_run_bot.sh  entry_point_run_bot_service.sh  gunicorn.py  nginx_config.conf
